<resources>
    <string name="app_name">DisOrder</string>
    <string-array name="strings">
        <item>less then 3 meals</item>
        <item>more then 3 meals</item>
        <item> 3 meals per day</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="date">Date</string>
    <string name="end_time">End Time</string>
    <string name="start_time">start time</string>
    <string name="part_of_task">part of task</string>
    <string name="description">description</string>
</resources>

