<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/descriptionET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="96dp"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/partET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/part_of_task"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/descriptionET"
        app:layout_constraintTop_toBottomOf="@+id/descriptionET" />

    <Button
        android:id="@+id/startTimeBtn"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginStart="64dp"
        android:background="@android:drawable/alert_light_frame"
        android:onClick="startTimePickerFunc"
        android:text="@string/start_time"
        app:layout_constraintBottom_toBottomOf="@+id/endTimeBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/endTimeBtn"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/endTimeBtn"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="64dp"
        android:background="@android:drawable/alert_light_frame"
        android:onClick="endTimePickerFunc"
        android:text="@string/end_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/partET" />

    <Button
        android:id="@+id/dateBtn"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginTop="28dp"
        android:background="@android:drawable/alert_light_frame"
        android:onClick="datePickerFunc"
        android:text="@string/date"
        app:layout_constraintEnd_toEndOf="@+id/endTimeBtn"
        app:layout_constraintStart_toStartOf="@+id/startTimeBtn"
        app:layout_constraintTop_toBottomOf="@+id/startTimeBtn" />

    <Button
        android:id="@+id/addTaskBtn"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginTop="64dp"
        android:background="@android:drawable/alert_light_frame"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="add task"
        app:layout_constraintEnd_toEndOf="@+id/dateBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/dateBtn"
        app:layout_constraintTop_toBottomOf="@+id/dateBtn" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:background="?android:attr/textCursorDrawable"
        android:backgroundTint="#81DDEC"
        android:text="Add Task Page"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>